--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -18,7 +18,7 @@ jobs:
           sudo apt-get update -qq
           sudo apt-get install -y --no-install-recommends \
             python3-pip python3-venv openjdk-11-jdk git-core \
-            zip unzip libncurses5 libstdc++6 libffi-dev \
+            zip unzip libstdc++6 libffi-dev \
             libssl-dev libjpeg-dev zlib1g-dev
 
       - name: Setup Python
