--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -19,7 +19,7 @@ jobs:
           sudo apt-get install -y --no-install-recommends \
             python3-pip python3-venv openjdk-11-jdk git-core \
             zip unzip libstdc++6 libffi-dev \
-            libssl-dev libjpeg-dev zlib1g-dev
+            libssl-dev libjpeg-dev zlib1g-dev autoconf automake libtool pkg-config
 
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -65,3 +65,4 @@ jobs:
         with:
           name: build-logs
           path: build.log
+
